# Basic-python-2026

./: 1st day.ipynb  README.md  Untitled1.ipynb  if-else_loops.ipynb  pyproject.toml
day1/: Untitled.ipynb  python_basic_day_1.ipynb
day2/: Chapter 2.ipynb  Chapter 3.ipynb  Chapter 4.ipynb  Day2.pptx  Untitled.ipynb  Untitled1.ipynb  example.fasta
day3/: Day_3.ipynb  Intro_to_Pandas.ipynb  Intro_to_Pandas.pptx  Intro_to_Pandas_Matplotlib.ipynb
day3/real_aligment/: .gitignore  README.md  environment.yml  requirements.txt  setup.py
day3/real_aligment/data/raw/: example_dna.fasta
day3/real_aligment/notebooks/: dna_translation_alignment.ipynb
day3/real_aligment/src/: __init__.py  bioseq.py
day3/real_aligment/tests/: test_bioseq.py
day4/: Encephalitozoon_intestinalis.gff  Intro_to_Pandas_Matplotlib.ipynb  Intro_to_Pandas_Matplotlib.pptx  modified_genome.gff  querying_gff.ipynb
day5/: Day 5 option2.ipynb  Day 5 solutions.ipynb  beer_aroma_compounds.csv  palmerpenguins_extended.csv  requirments.txt
exercises/: if-else_loops.ipynb
