[project]
name = "basic-python-2026-practicals"
version = "0.1.0"
description = "Shared uv environment for all UBDS Basic Python 2026 practicals."
requires-python = ">=3.11,<3.13"
dependencies = [
    "biopython>=1.83",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.10.1,<4",
    "numpy>=1.26.0,<3",
    "pandas>=2.2.0,<3",
    "pytest>=8.0.0",
    "scikit-learn>=1.5.0,<2",
    "scipy>=1.15.2,<2",
    "seaborn>=0.13.2,<1",
    "statsmodels>=0.14.5,<1",
]

[tool.uv]
package = false
